@@ -26,7 +26,7 @@ public class Kata4 {
 
         return movieLists.stream()
                 .flatMap(movieList->movieList.getVideos().stream())
-                .map(movie -> Map.of("id",movie.getId(),
+                .map(movie -> ImmutableMap.of("id",movie.getId(),
                         "title",movie.getTitle(),
                         "boxart",movie.getBoxarts()
                                 .stream()
